find_package(Eigen3 REQUIRED NO_MODULE)

enable_testing()

macro(add_fmca_test name)
  add_executable(${name}.out ${name}.cpp)
  target_link_libraries(${name}.out PRIVATE Eigen3::Eigen)
  target_include_directories(${name}.out PRIVATE ${CMAKE_SOURCE_DIR}/FMCA)
  add_test(NAME ${name} COMMAND ${name}.out)
endmacro()

add_fmca_test(test_AdaptiveTreeSearch)
add_fmca_test(test_Alpha)
add_fmca_test(test_ClusterTree)
add_fmca_test(test_ClusterTreeMetrics)
add_fmca_test(test_Droplet)
add_fmca_test(test_FALKON)
add_fmca_test(test_H2DualClusterBases)
add_fmca_test(test_H2Matrix)
add_fmca_test(test_H2MatrixProjector)
add_fmca_test(test_H2SampletCompressor)
add_fmca_test(test_H2SampletCompressorUnsymmetric)
add_fmca_test(test_H2SampletCondition)
add_fmca_test(test_H2kernelActor)
add_fmca_test(test_HMatrix)
add_fmca_test(test_KMinList)
add_fmca_test(test_KernelInterpolation)
add_fmca_test(test_MortonClusterTree)
add_fmca_test(test_MortonCompare)
add_fmca_test(test_RandomTreeAccessor)
add_fmca_test(test_SampletBasis)
add_fmca_test(test_SampletTransformer)
add_fmca_test(test_TreeIterator)
add_fmca_test(test_kNN)
